Sep 27, 2001: Ludwig Nussel <l-n@sourceforge.net>
- made q3_exec usable for Wofenstein, removed wo_exec
- identify q3/rtcw servers by their version string
- use common option struct for all games with q3 engine
- add configuration options for Wolfenstein to q3 tab
- pass server and rconpasswords on the command line
- fix q3 rcon_password -> rconpassword

Sept 24,2001: Alex Burger <alex@fragit_dot_net>
- Changed version to 0.9.7a

Sept 24,2001: Alex Burger <alex@fragit_dot_net>
- Added wo_exec function to properly launch Wolf.  Tested with
  Wolfmptest 0.7.16-1

Sept 19, 2001: Alex Burger <alex@fragit_dot_net>
- Added Wolfenstein support.  Currently uses q3_exec to launch
  the game, but will change when Wolf client for Linux is released.
  Uses qstat as if it is a Quake3 server

Sept 14, 2001: Alex Burger <alex@fragit_dot_net>
- Added docs/xqfdocs.html
- Added new NEWS file from Jordi 

Sept 10, 2001: Alex Burger <alex@fragit_dot_net>
- Added Jordi Mallach's man page - xqf.6 and modified Makefile.am
- Added 'General' Preferences page and moved most of 'Appearance'
  to 'General' page.

Sept 5, 2001: Alex Burger <alex@fragit_dot_net>
- Patch by  Ludwig Nussel ludwig.nussel@gmx.de to add German
  translation and some code fixes.

Aug 19, 2001: Bill Adams <bill@evilbill.org>
- Removed BUILD_INCLUDED_LIBINTL from intl/Makefile.pm and replaced it with
  USE_INCLUDED_LIBINTL as that is the only variable defined in gettext.m4 for
  gettext 0.10.35.
- Patch by  Ludwig Nussel ludwig.nussel@gmx.de to fix some of the
  q3a game types, options for setting fs_game on the command line and
  r3a hack for the vm_* settings.
  
Aug 9, 2001: Alex Burger <alex@fragit_dot_net>
-Changed Quake3 protocol version to 66 to support
 latest Quake3 patch.  Change located in game.c

July 07, 2001, Bill Adams <bill@evilbill.org>
- Added "Game Type" filter.  Now you can filter on 
  CTF, TDM, etc. and the mod.
- Merged Jordi's changes (see below).
  